// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tooltip Generator - Snapshot Tests (Intermediate Data) > should produce consistent arrow dimensions 1`] = `
{
  "height": 10,
  "width": 20,
}
`;

exports[`Tooltip Generator - Snapshot Tests (Intermediate Data) > should produce consistent box layout 1`] = `
{
  "borderRadius": 6,
  "fillVariable": undefined,
  "fontSize": 14,
  "fontWeight": 400,
  "isWhiteText": undefined,
  "paddingX": 10,
  "paddingY": 6,
  "textVariable": "text-color-surface",
}
`;

exports[`Tooltip Generator - Snapshot Tests (Intermediate Data) > should produce consistent complete tooltip data (golden path) 1`] = `
{
  "arrowDimensions": {
    "height": 10,
    "width": 20,
  },
  "boxLayout": {
    "borderRadius": 6,
    "fillVariable": undefined,
    "fontSize": 14,
    "fontWeight": 400,
    "isWhiteText": undefined,
    "paddingX": 10,
    "paddingY": 6,
    "textVariable": "text-color-surface",
  },
  "boxStyles": {
    "parsed": {
      "borderRadius": 6,
      "fontSize": 14,
      "paddingX": 10,
      "paddingY": 6,
      "textVariable": "text-color-surface",
    },
    "raw": "bg-surface-3 text-surface rounded-md px-2.5 py-1.5 text-sm",
  },
  "sideConfig": {
    "default": "top",
    "descriptions": {
      "bottom": "Tooltip appears below the trigger",
      "left": "Tooltip appears to the left of the trigger",
      "right": "Tooltip appears to the right of the trigger",
      "top": "Tooltip appears above the trigger",
    },
    "values": [
      "top",
      "bottom",
      "left",
      "right",
    ],
  },
  "text": {
    "fontSize": 14,
    "fontWeight": 400,
  },
}
`;

exports[`Tooltip Generator - Snapshot Tests (Intermediate Data) > should produce consistent parsed box styles 1`] = `
{
  "borderRadius": 6,
  "fontSize": 14,
  "paddingX": 10,
  "paddingY": 6,
  "textVariable": "text-color-surface",
}
`;

exports[`Tooltip Generator - Snapshot Tests (Intermediate Data) > should produce consistent side config from registry 1`] = `
{
  "default": "top",
  "descriptions": {
    "bottom": "Tooltip appears below the trigger",
    "left": "Tooltip appears to the left of the trigger",
    "right": "Tooltip appears to the right of the trigger",
    "top": "Tooltip appears above the trigger",
  },
  "values": [
    "top",
    "bottom",
    "left",
    "right",
  ],
}
`;
